deploy/k3s/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasklog
