deploy/k3s/06_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklog
  namespace: tasklog
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
